# Compiler-v2

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ast/: Cargo.toml
ast/src/: lib.rs  tests.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  python.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  tests.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  tests.rs  tokens.rs
parser/: Cargo.toml
parser/derive/: Cargo.toml
parser/derive/src/: lib.rs
parser/src/: ast.rs  lib.rs  parser.rs  tests.rs
src/: main.rs  tests.rs
tests/: basic.txt  invalid_float.txt  invalid_token.txt.stderr  vars.txt
tests/lexer/errs/: invalid_float.txt.stderr  invalid_token.txt.stderr
