[workspace]
members = ["ast", "compiler", "interpreter", "lexer", "parser", "parser/derive"]

[package]
name = "compiler_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
lexer = { path = "lexer", features = ["lexer"] }
parser = { path = "parser" }
ast = { path = "ast", features = ["parser"] }
compiler = { path = "compiler" }
